<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_luna_home"
        android:title="@string/tab_today"
        android:contentDescription="@string/tab_today" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_luna_calendar"
        android:title="@string/tab_calendar"
        android:contentDescription="@string/tab_calendar" />
    <item
        android:id="@+id/insightsFragment"
        android:icon="@drawable/ic_luna_activity"
        android:title="@string/tab_insights"
        android:contentDescription="@string/tab_insights" />
    <item
        android:id="@+id/settingsActivity"
        android:icon="@drawable/ic_luna_user"
        android:title="@string/tab_settings"
        android:contentDescription="@string/tab_settings" />
</menu>
